fix spacing on page a bit more, add comments on code, replace images of updated site on readme, delete unnecessary lines of code

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,17 +1,22 @@
+/* global reset of all margins, paddings and borders*/
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* Removes underline from anchor tag and changes color*/
 a {
   text-decoration: none;
   color: #fff;
 }
 
+/* Changes the background color of the body */ 
 body {
     background-color: teal;
 }
+
+/* spaces out items in the navbar and changes color of background and text*/
 header {
     display: flex;
     align-items: center;
@@ -31,6 +36,7 @@ header h1 {
     font-size: 200%;
 }
 
+/* add background image below the navbar*/
 .banner {
     height: 400px;
     width: 100%;
@@ -40,63 +46,37 @@ header h1 {
     background-position: center;
 }
 
-main {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    width: 100%;
-}
-
+/* make the projects flex and set width */
 .projects-whole {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    align-items: center;
-    width: 70%;
+    width: 95%;
 }
 
-/* .projects-bottom-half {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; 
-    width: 100%;
-} */
-
+/* flex and set a bottom margin to space between sections*/
 .works {
     display: flex;
-    flex-direction: row;
-    /* flex-wrap: wrap; */
-    justify-content: center;
-    width: 100%;
     margin-bottom: 50px;
 }
 
-/* .projects {
-    flex: 0 1 33%;
-} */
-
-section p{
-    display: inline-block;
-    width: 75%;
-    font-size: 25px;
-}
 .about-me {
     display:flex;
-    flex-direction: row;
-    width: 100%;
     margin-bottom: 50px;
 }
 
+/* adjust the width and spacing for each section*/
+.p-container {
+    width: 95%;
+}
 
-
-.about-me p {
-    width: 70%;
+.p-container p {
+    width: 95%;
+    text-align: left;
+    font-size: 25px;
 }
 
 .about-me h2, .works h2, .contact-me h2{
-    width: 30%;
+    width: 25%;
     border-right: black 3px solid;
     text-align: right;
     font-size: 45px;
@@ -111,7 +91,7 @@ section p{
 }
 
 .contact-me ul {
-    width:70%;
+    width:95%;
 }
 
 footer {
@@ -119,28 +99,26 @@ footer {
     justify-content: space-evenly;
 }
 
+footer ul {
+    width: 70%
+}
 
-
+/* set text over images, referenced code found on W3 schools. 
+styled color and positioning of the text over images  */
 .first-assignment {
     position: relative;
     text-align: center;
     min-height: 100px;
     border: 1px solid black;
-    /* padding: 1% 2%; */
-    width: 100%;
-    /* flex: 0 1 75%; */
+    width: 90%;
 }
 .second-assignment, .third-assignment {
     position: relative;
     text-align: center;
     min-height: 100px;
     border: 1px solid black;
-    width: 50%;
+    width: 45%;
 }
-
-/* .third-assignment{
-    height: 300px;
-} */
 
 .first-assignment p {
     padding: 5px;
@@ -166,10 +144,10 @@ footer {
     left: 16px;
 }
 
+/* setting size of the image tags on the projects displayed*/
 .first-assignment img, .second-assignment img, .third-assignment img{
     width: 100%;
-    margin: 0px;
-    padding: 0px;
+    height: 100%;
 }
 
 .second-assignment p,
@@ -198,6 +176,7 @@ footer {
     left: 16px;
 }
 
+/* use media query to make the page spacing mobile friendly */
 @media screen and (max-width:767px){
     .about-me h2, .works h2, .contact-me h2{
         width: 50%;
@@ -216,8 +195,9 @@ footer {
         flex-direction: column;
     }
 
-    .about-me p {
-        width: 90%;
+    .p-container p {
+        width: 100%;
+        text-align: center;
     }
     .contact-me ul li {
         display: flex;
@@ -237,7 +217,19 @@ footer {
         align-items: center;
         width: 90%;
     }
-    .second-assignment, .third-assignment {
+    .first-assignment, .second-assignment, .third-assignment {
         width: 100%;
+        height: 300px;
+        margin-bottom: 5px;
+    }
+    .second-assignment p, 
+    .third-assignment p, 
+    .second-assignment h3, 
+    .third-assignment h3 {
+        font-size: 20px;
+        width: 200px;
+    }
+    .first-assignment img, .second-assignment img, .third-assignment img{
+        height: 100%;
     }
 }
